fixed button colors bug on safari (1)

--- a/src/app/core/global-css/buttons.scss
+++ b/src/app/core/global-css/buttons.scss
@@ -130,6 +130,7 @@ $animationTime: 0.2s;
 }
 
 .skin-btn {
+  color: $black !important;
   background-color: $skin-300 !important;
   cursor: pointer;
 
